Fixed layout bugs and improved responsive design

--- a/src/main.css
+++ b/src/main.css
@@ -3,30 +3,35 @@
     --bg-dark: #040720;
     --text-font: fangsong;
     --shadow: 0 0 15px var(--accent);
-    --transition-all:all 0.6s ease-in-out;
-    --transition-transform:transform 0.6s ease-in-out;
+    --transition-all: all 0.6s ease-in-out;
+    --transition-transform: transform 0.6s ease-in-out;
 }
 
-
-* {
+html,
+body,
+#root {
+    height: calc(var(--vh, 1vh) * 100);
+    min-height: 100vh;
     margin: 0;
     padding: 0;
     box-sizing: border-box;
 }
-#wrapper{
+
+#wrapper {
     display: flex;
     font-family: sans-serif;
     font-size: 16px;
     position: relative;
-    height: 100vh;
+    height: 100%;
 }
-h1{
+
+h1 {
     color: transparent;
     text-transform: uppercase;
     letter-spacing: 0.5em;
     position: absolute;
     background-image: url('/public/images/Seasons\ of\ Time.jpg');
-    background-position: top;
+    background-position: center top;
     background-size: cover;
     -webkit-background-clip: text;
     background-clip: text;
@@ -36,7 +41,8 @@ h1{
     font-size: 3.4vw;
     font-weight: 800;
 }
-.calendar-box{
+
+.calendar-box {
     width: 100%;
     height: 100%;
     display: flex;
@@ -46,7 +52,8 @@ h1{
     background-position: center;
     background-repeat: no-repeat;
 }
-.main{
+
+.main {
     position: relative;
     display: flex;
     justify-content: center;
@@ -57,7 +64,8 @@ h1{
     transform: translateX(23vw);
     transition: var(--transition-all);
 }
-.data-text{
+
+.data-text {
     position: relative;
     display: flex;
     justify-content: center;
@@ -74,46 +82,59 @@ h1{
     cursor: pointer;
     transition: var(--transition-transform);
 }
+
 @keyframes shift {
-    0%, 40%, 44%, 58%, 61%, 65%, 69%, 73%, 100% {
-       transform: skewX(0deg);
+
+    0%,
+    40%,
+    44%,
+    58%,
+    61%,
+    65%,
+    69%,
+    73%,
+    100% {
+        transform: skewX(0deg);
     }
- 
+
     41% {
-       transform: skewX(5deg);
+        transform: skewX(5deg);
     }
- 
+
     42% {
-       transform: skewX(-5deg);
+        transform: skewX(-5deg);
     }
- 
+
     59% {
-       transform: skewX(10deg) skewY(5deg);
+        transform: skewX(10deg) skewY(5deg);
     }
- 
+
     60% {
-       transform: skewX(-10deg) skewY(-5deg);
+        transform: skewX(-10deg) skewY(-5deg);
     }
- 
+
     63% {
-       transform: skewX(5deg) skewY(-2.5deg);
+        transform: skewX(5deg) skewY(-2.5deg);
     }
- 
+
     70% {
-       transform: skewX(-25deg) skewY(-10deg);
+        transform: skewX(-25deg) skewY(-10deg);
     }
- 
+
     71% {
-       transform: skewX(5deg) skewY(-5deg);
+        transform: skewX(5deg) skewY(-5deg);
     }
- }
-.text{
+}
+
+.text {
     font-size: 8rem;
     font-weight: 600;
     color: var(--accent);
     font-family: var(--text-font);
 }
-.text-month,.text-week{
+
+.text-month,
+.text-week {
     color: #fff;
     position: absolute;
     right: 1rem;
@@ -122,14 +143,15 @@ h1{
     letter-spacing: 0.3em;
 }
 
-.text-week{
+.text-week {
     left: 2rem;
 }
+
 /* ////////////////////#////////////////////// */
-.content{
+.content {
     position: relative;
     width: 50%;
-    background-color: rgb(255 255 255,0.5);
+    background-color: rgb(255 255 255, 0.5);
     backdrop-filter: blur(10px);
     display: flex;
     justify-content: center;
@@ -138,22 +160,24 @@ h1{
     color: #fff;
     transform: translateX(-300px);
     opacity: 0;
-    transition:var(--transition-all);
+    transition: var(--transition-all);
 }
 
-.calendar{
+.calendar {
     display: flex;
     flex-direction: column;
     width: 70%;
 }
-.calendar-header{
+
+.calendar-header {
     display: flex;
     justify-content: center;
     align-items: center;
     gap: 20px;
     padding: 1rem 0;
 }
-.calendar-header select{
+
+.calendar-header select {
     height: 40px;
     width: 107px;
     text-align: center;
@@ -167,14 +191,16 @@ h1{
     outline: none;
     scroll-behavior: unset;
 }
-.calendar-header select option{
+
+.calendar-header select option {
     font-weight: 600;
     background-color: #1e1e2f;
-    
+
 }
+
 select::-webkit-scrollbar {
-    width: 0;          
-    background: transparent; 
+    width: 0;
+    background: transparent;
 }
 
 .calendar-grid {
@@ -184,7 +210,8 @@ select::-webkit-scrollbar {
     gap: 15px;
     border-radius: 5px;
 }
-.day-box{
+
+.day-box {
     font-size: 1.3rem;
     height: 8vh;
     font-weight: 600;
@@ -193,20 +220,24 @@ select::-webkit-scrollbar {
     justify-content: center;
     align-items: center;
 }
-.day-box:hover{
+
+.day-box:hover {
     color: var(--accent);
 }
-.day-box.today{
+
+.day-box.today {
     background-color: var(--bg-dark);
     color: var(--accent);
     border-radius: 5px;
 }
+
 .day-box,
 .day-name {
-  user-select: none; 
-  pointer-events: all; 
+    user-select: none;
+    pointer-events: all;
 }
-.day-name{
+
+.day-name {
     font-weight: 600;
     font-family: var(--text-font);
     letter-spacing: 0.1em;
@@ -214,70 +245,94 @@ select::-webkit-scrollbar {
 }
 
 /* style Class */
-.content.content-show{
+.content.content-show {
     transform: translateX(0px);
     opacity: 1;
 }
-.main.main-show{
+
+.main.main-show {
     transform: translateX(0);
 }
-.data-text.data-text-clicked{
+
+.data-text.data-text-clicked {
     transform: scale(1);
 }
 
 @media screen and (max-width:1000px) {
-    #wrapper{
-        height: 140vh;
-    }
-    .calendar-box{
+    .calendar-box {
         flex-direction: column;
         justify-content: center;
         align-items: center;
     }
-    .main{
+
+    .main {
         position: absolute;
         top: 50%;
         left: 50%;
-        transform: translate(-51%, -56%) scale(0.8);
-        
+        transform: translate(-51%, -56%) scale(0.9);
+
     }
-    .main.main-show{
-        transform:  translate(-50%, -78%) scale(0.6);
+
+    .main.main-show {
+        transform: translate(-50%, -78%) scale(0.8);
         z-index: 2;
     }
-    .content{
+
+    .content {
         position: absolute;
         top: 50%;
         left: 50%;
         transform: translate(-50%, -91%);
         width: 100%;
-        padding-bottom: 2rem;
+        /* padding-bottom: 2rem; */
     }
-    .content.content-show{
-        transform: translate(-50%, clamp(-40%, -10%, -10%));
+
+    .content.content-show {
+        transform: translate(-50%, clamp(-40%, -10%, -20%));
         z-index: 3;
     }
 }
+
 @media screen and (max-width:600px) {
 
-    .main{
+    .main {
         width: 100%;
     }
-    .calendar{
+
+    .main.main-show {
+        transform: translate(-50%, -82%) scale(0.6);
+        z-index: 2;
+    }
+
+    .calendar {
         width: 90%;
     }
+
     .content.content-show {
-        transform: translate(-50%, clamp(-40%, -10%, -10%));
-      }
-      
-    .text-month{
+        transform: translate(-50%, clamp(-40%, -10%, -25%));
+    }
+
+    .text-month {
         right: 0.5rem;
-    } 
-    .text-week{
+    }
+
+    .text-week {
         left: 1rem;
     }
 }
 
-
-
-  
+@media screen and (orientation: landscape) and (max-height: 600px){
+    h1{
+        top: -0.5em;
+    }
+    .content.content-show {
+        transform: translate(-50%, clamp(-42%, -10%, -42%));
+    }
+    .main {
+        transform: translate(-51%, -45%) scale(0.9);
+    }
+    .main.main-show {
+        transform: translate(-100%, -84%) scale(0.3);
+        z-index: 4;
+    }
+}
